<resources>
    <string name="app_name">Mod1Class4</string>
    <string name="pan_dos">Registrar</string>

    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrar">Registrar</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="rep_contrasena">Repetir Contraseña</string>
    <string name="estado">Estado</string>
    <string name="genero">Genero</string>
</resources>
